snapshots/syntax/statements/declarations/variables/private_withevents_mscomm.snap
---
source: src/syntax/statements/declarations/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DimStatement
      children:
        - kind: PrivateKeyword
          text: Private
        - kind: Whitespace
          text: " "
        - kind: WithEventsKeyword
          text: WithEvents
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: m_comm
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: MSComm
        - kind: Newline
          text: "\n"
